tests/fixtures/valid/basic/assert_statement.py
# Assert statement
x: int = 5
assert x > 0
print("x is positive")
assert x == 5
print("x equals 5")
assert x < 10
print("x less than 10")
