tests/fixtures/invalid/continue_outside_loop.py
# continue statement outside of loop
x: int = 10
continue
print(x)
